--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="displayContent">
                 <div class="about" >
                     <h2>Sobre</h2>
-                    <p>Atualmente Segurança da Informação no Instituto de Educação Superior de Brasília (IESB), e atuando como Desenvolvedor Front-End.<p>
+                    <p>Atualmente estou cursando Segurança da Informação no Instituto de Educação Superior de Brasília (IESB), e atuando como Desenvolvedor Front-End.<p>
                     <p>Possuo sólidos conhecimentos em HTML5 e CSS3. Estou me aperfeiçoamento em JavaScript, enquanto inicio meus estudos em NodeJS.</p>
                 </div>
                 <div class="habilidades" id="habilidades">
