solucionei o bug de espaçamento ao clicar em um item do menu

--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
                         <p id="presName">Marcos Barbosa</p>
                         <p id="presDev">Desenvolvedor Front-End / Estudante em Back-End</p>
                     </div>
-                    <div class="positionMenu"><span id="sobre"></span></div>
                     <div class="presButtons">
                         <a href="assets/cv/cv-marcosbarbosa.pdf" id="presCurriculo" class="presStyleButtons" target="_blank">Currículo<img src="assets/pres/download.png" alt=""></a>
                         <a href="https://api.whatsapp.com/send?phone=5561981016665&text=Ol%C3%A1!%20Vim%20pelo%20seu%20portf%C3%B3lio." id="presContato" class="presStyleButtons" target="_blank">Entrar em contato <img src="assets/pres/external.png" alt=""></a>
@@ -48,12 +47,11 @@
                 <img src="assets/pres/photo-pres.png" alt="PERFIL" id="perfil">
             </div>
             <div class="displayContent">
-                <div class="about">
+                <div class="about" " id="sobre">
                     <h2>Sobre</h2>
                     <p>Atualmente estou cursando Segurança da Informação no Instituto de Educação Superior de Brasília (IESB), e atuando como Desenvolvedor Front-End.<p>
                     <p>Possuo sólidos conhecimentos em HTML5 e CSS3. Estou me aperfeiçoamento em JavaScript, enquanto inicio meus estudos em NodeJS.</p>
                 </div>
-                <div class="positionMenu"><span id="projetos"></span></div>
                 <div class="habilidades" id="habilidades">
                     <div class="habilidadeContent">
                         <h2>Habilidades</h2>
@@ -67,7 +65,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="projetos">
+            <div class="projetos" id="projetos">
                 <h2>Projetos</h2>
                 <div class="projetosContent">
                     <div class="projetosItem">
