--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <div class="presInfContainer">
                     <div class="presTitle">
                         <h1>Olá! Eu sou o</h1>
-                        <p id="presName">Marcos Barbosa</p>
+                        <p id="presName" class="typingAnimation">Marcos Barbosa</p>
                         <p id="presDev">Desenvolvedor Front-End / Estudante em Back-End</p>
                     </div>
                     <div class="presButtons">
@@ -47,12 +47,12 @@
                 <img src="assets/pres/photo-pres.png" alt="PERFIL" id="perfil">
             </div>
             <div class="displayContent">
-                <div class="about" " id="sobre">
+                <div class="about" id="sobre" data-anime="left">
                     <h2>Sobre</h2>
                     <p>Atualmente estou cursando Segurança da Informação no Instituto de Educação Superior de Brasília (IESB), e atuando como Desenvolvedor Front-End.<p>
                     <p>Possuo sólidos conhecimentos em HTML5 e CSS3. Estou me aperfeiçoamento em JavaScript, enquanto inicio meus estudos em NodeJS.</p>
                 </div>
-                <div class="habilidades" id="habilidades">
+                <div class="habilidades" id="habilidades" data-anime="right">
                     <div class="habilidadeContent">
                         <h2>Habilidades</h2>
                         <div class="habilidadeItem"><img src="assets/habilidades/html.png" alt="HTML"> <progress value="87" max="100"></progress><span class="porcentagem">87%</span></div>
@@ -66,9 +66,9 @@
         </div>
         <div class="container">
             <div class="projetos" id="projetos">
-                <h2>Projetos</h2>
+                <h2 data-anime="right">Projetos</h2>
                 <div class="projetosContent">
-                    <div class="projetosItem">
+                    <div class="projetosItem" data-anime="left">
                         <img src="assets/projetos/devnotes.png" alt="">
                         <div class="projetosBtnLink">
                             <a href="https://marcosbarbosa-dev.github.io/notes/" class="linkProjetos" target="_blank">Acessar</a>
@@ -76,7 +76,7 @@
                             <a href="https://github.com/marcosbarbosa-dev/notes/" class="linkProjetos" target="_blank">Repositório</a>
                         </div>
                     </div>
-                    <div class="projetosItem">
+                    <div class="projetosItem" data-anime="left">
                         <img src="assets/projetos/sistema-escolar.png" alt="">
                         <div class="projetosBtnLink">
                             <a href="https://marcosbarbosa-dev.github.io/sistema-escolar/login.html" class="linkProjetos" target="_blank">Acessar</a>
@@ -84,7 +84,7 @@
                             <a href="https://github.com/marcosbarbosa-dev/sistema-escolar/" class="linkProjetos" target="_blank">Repositório</a>
                         </div>
                     </div>
-                    <div class="projetosItem">
+                    <div class="projetosItem" data-anime="left">
                         <img src="assets/projetos/boletim.png" alt="">
                         <div class="projetosBtnLink">
                             <a href="https://marcosbarbosa-dev.github.io/boletim-js/" class="linkProjetos" target="_blank">Acessar</a>
@@ -92,7 +92,7 @@
                             <a href="https://github.com/marcosbarbosa-dev/boletim-js/" class="linkProjetos" target="_blank">Repositório</a>
                         </div>
                     </div>
-                    <div class="projetosItem">
+                    <div class="projetosItem" data-anime="left">
                         <img src="assets/projetos/clone-google.png" alt="">
                         <div class="projetosBtnLink">
                             <a href="https://marcosbarbosa-dev.github.io/clone-google/" class="linkProjetos" target="_blank">Acessar</a>
@@ -100,7 +100,7 @@
                             <a href="https://github.com/marcosbarbosa-dev/clone-google/" class="linkProjetos" target="_blank">Repositório</a>
                         </div>
                     </div>
-                    <div class="projetosItem">
+                    <div class="projetosItem" data-anime="left">
                         <img src="assets/projetos/cordel.png" alt="">
                         <div class="projetosBtnLink">
                             <a href="https://marcosbarbosa-dev.github.io/projeto-cordel/" class="linkProjetos" target="_blank">Acessar</a>
@@ -108,7 +108,7 @@
                             <a href="https://github.com/marcosbarbosa-dev/projetoCordel" class="linkProjetos" target="_blank">Repositório</a>
                         </div>
                     </div>
-                    <div class="projetosItem">
+                    <div class="projetosItem" data-anime="left">
                         <img src="assets/projetos/cardapio.png" alt="">
                         <div class="projetosBtnLink">
                             <a href="#projetos" class="linkProjetos" target="_blank">Acessar</a>
@@ -120,7 +120,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="contato" id="contato">
+            <div class="contato" id="contato" data-anime="left">
                 <h2>Contato</h2>
                 <div class="containerContato">
                     <div class="contatoCont">
