Corrigi o bug de responsividade causado pela animação

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <p>Atualmente estou cursando Segurança da Informação no Instituto de Educação Superior de Brasília (IESB), e atuando como Desenvolvedor Front-End.<p>
                     <p>Possuo sólidos conhecimentos em HTML5 e CSS3. Estou me aperfeiçoamento em JavaScript, enquanto inicio meus estudos em NodeJS.</p>
                 </div>
-                <div class="habilidades" id="habilidades" data-anime="right">
+                <div class="habilidades" id="habilidades" data-anime="left">
                     <div class="habilidadeContent">
                         <h2>Habilidades</h2>
                         <div class="habilidadeItem"><img src="assets/habilidades/html.png" alt="HTML"> <progress value="87" max="100"></progress><span class="porcentagem">87%</span></div>
@@ -66,7 +66,7 @@
         </div>
         <div class="container">
             <div class="projetos" id="projetos">
-                <h2 data-anime="right">Projetos</h2>
+                <h2 data-anime="left">Projetos</h2>
                 <div class="projetosContent">
                     <div class="projetosItem" data-anime="left">
                         <img src="assets/projetos/devnotes.png" alt="">
