Alterei um dos projetos

--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
                         <div class="habilidadeItem"><img src="assets/habilidades/html.png" alt="HTML"> <progress value="87" max="100"></progress><span class="porcentagem">87%</span></div>
                         <div class="habilidadeItem"><img src="assets/habilidades/css.png" alt="CSS"> <progress value="90" max="100"></progress><span class="porcentagem">90%</span></div>
                         <div class="habilidadeItem"><img src="assets/habilidades/js.png" alt="JS"> <progress value="57" max="100"></progress><span class="porcentagem">57%</span></div>
-                        <div class="habilidadeItem"><img src="assets/habilidades/nodejs.png" alt="NODEJS"> <progress value="1" max="100"></progress><span class="porcentagem">1%</span></div>
-                        <div class="habilidadeItem"><img src="assets/habilidades/bootstrap.png" alt="BOOTSTRAP"> <progress value="80" max="100"></progress><span class="porcentagem">80%</span></div>
+                        <div class="habilidadeItem"><img src="assets/habilidades/bootstrap.png" alt="BOOTSTRAP"> <progress value="67" max="100"></progress><span class="porcentagem">67%</span></div>
                     </div>
                 </div>
             </div>
@@ -105,15 +104,15 @@
                         <div class="projetosBtnLink">
                             <a href="https://marcosbarbosa-dev.github.io/projeto-cordel/" class="linkProjetos" target="_blank">Acessar</a>
                              <p class="infProjetos" id="cordel">Informações</p>
-                            <a href="https://github.com/marcosbarbosa-dev/projetoCordel" class="linkProjetos" target="_blank">Repositório</a>
+                            <a href="https://github.com/marcosbarbosa-dev/projetoCordel/" class="linkProjetos" target="_blank">Repositório</a>
                         </div>
                     </div>
                     <div class="projetosItem" data-anime="left">
-                        <img src="assets/projetos/cardapio.png" alt="">
+                        <img src="assets/projetos/android.png" alt="">
                         <div class="projetosBtnLink">
-                            <a href="#projetos" class="linkProjetos" target="_blank">Acessar</a>
-                             <p class="infProjetos" id="cardapio">Informações</p>
-                            <a href="https://github.com/marcosbarbosa-dev/" class="linkProjetos" target="_blank">Repositório</a>
+                            <a href="https://marcosbarbosa-dev.github.io/projeto-android/" class="linkProjetos" target="_blank">Acessar</a>
+                             <p class="infProjetos" id="android">Informações</p>
+                            <a href="https://github.com/marcosbarbosa-dev/projeto-android/" class="linkProjetos" target="_blank">Repositório</a>
                         </div>
                     </div>
                 </div>
