alterei msg wpp

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     </div>
                     <div class="presButtons">
                         <a href="assets/cv/cv-marcosbarbosa.pdf" id="presCurriculo" class="presStyleButtons" target="_blank">Currículo<img src="assets/pres/download.png" alt=""></a>
-                        <a href="https://api.whatsapp.com/send?phone=5561981016665&text=Ol%C3%A1!%20Vim%20pelo%20seu%20portf%C3%B3lio." id="presContato" class="presStyleButtons" target="_blank">Entrar em contato <img src="assets/pres/external.png" alt=""></a>
+                        <a href="https://api.whatsapp.com/send?phone=5561981016665&text=Ol%C3%A1!%20Gostaria%20de%20conhecer%20melhor%20o%20seu%20trabalho." id="presContato" class="presStyleButtons" target="_blank">Entrar em contato <img src="assets/pres/external.png" alt=""></a>
                     </div>
                 </div>
                 <img src="assets/pres/photo-pres.png" alt="PERFIL" id="perfil">
@@ -55,10 +55,10 @@
                 <div class="habilidades" id="habilidades" data-anime="left">
                     <div class="habilidadeContent">
                         <h2>Habilidades</h2>
-                        <div class="habilidadeItem"><img src="assets/habilidades/html.png" alt="HTML"> <progress value="87" max="100"></progress><span class="porcentagem">87%</span></div>
-                        <div class="habilidadeItem"><img src="assets/habilidades/css.png" alt="CSS"> <progress value="90" max="100"></progress><span class="porcentagem">90%</span></div>
-                        <div class="habilidadeItem"><img src="assets/habilidades/js.png" alt="JS"> <progress value="57" max="100"></progress><span class="porcentagem">57%</span></div>
-                        <div class="habilidadeItem"><img src="assets/habilidades/bootstrap.png" alt="BOOTSTRAP"> <progress value="67" max="100"></progress><span class="porcentagem">67%</span></div>
+                        <div class="habilidadeItem"><img src="assets/habilidades/html.png" alt="HTML"> <progress value="95" max="100"></progress><span class="porcentagem">95%</span></div>
+                        <div class="habilidadeItem"><img src="assets/habilidades/css.png" alt="CSS"> <progress value="93" max="100"></progress><span class="porcentagem">93%</span></div>
+                        <div class="habilidadeItem"><img src="assets/habilidades/js.png" alt="JS"> <progress value="52" max="100"></progress><span class="porcentagem">52%</span></div>
+                        <div class="habilidadeItem"><img src="assets/habilidades/bootstrap.png" alt="BOOTSTRAP"> <progress value="46" max="100"></progress><span class="porcentagem">46%</span></div>
                     </div>
                 </div>
             </div>
@@ -130,7 +130,7 @@
                         </a>
                     </div>
                     <div class="contatoCont">
-                        <a href="https://api.whatsapp.com/send?phone=5561981016665&text=Ol%C3%A1!%20Vim%20pelo%20seu%20portf%C3%B3lio." target="_blank">
+                        <a href="https://api.whatsapp.com/send?phone=5561981016665&text=Ol%C3%A1!%20Gostaria%20de%20conhecer%20melhor%20o%20seu%20trabalho." target="_blank">
                             <img src="assets/contato/telefoneD.png" id="telefoneIco">
                             <h3>Telefone</h3>
                             <p>61 98101-6665</p>
