Adicionei um botão para subir ao home

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
             </div>
         </div>
     </main>
+<di><a href="#home"><img src="assets/btn/toTop.png" id="toTop"></a></div>
 <div class="modalBG"></div>
 <div class="modal">
     <div class="lineClose">
