--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Portfólio | Marcos Barbosa</title>
 </head>
-<body oncontextmenu="return false">
+<body >
 <div class="positionMenu"><span id="home"></span></div>
     <header>
         <div class="headerContainer">
@@ -168,6 +168,7 @@
             <p id="dataModal"></p>
         </div>
     </div>
+    <div class="btnCloseModal"><button id="closeModalBtn">Fechar</button></div>
 </div>
 <script src="scripts/script.js"></script>
 </body>
