desabilitei o botão direito do mouse

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>Portfólio | Marcos Barbosa</title>
 </head>
-<body >
+<body oncontextmenu="return false">
 <div class="positionMenu"><span id="home"></span></div>
     <header>
         <div class="headerContainer">
