--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 <div class="modal">
     <div class="lineClose">
         <h2 id="titleModal"></h2>
-        <img src="assets/modal/close.png" id="closeModal">
+        <img src="assets/imagens/modal/close.png" id="closeModal">
     </div>
     <div class="modalContent">
         <p id="contentModal"></p>
